<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PhrasePad</string>
    <string name="phrases">Phrases</string>
    <string name="search">Search</string>
    <string name="quiz">Quizzes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="add_phrase">Add Phrase</string>
    <string name="add_phrase_title">Add new phrase</string>
    <string name="save">Save</string>
    <string name="phrase_entry_error">Enter a phrase</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="finish">Finish</string>
    <string name="deleted">\"%1$s\" deleted</string>
...
